# Morel

./: .gitignore  .infisical.json  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Dialog.cpp  Dialog.hpp  GenerateReport.cpp  Makefile  README.md  app.cpp  makefile  setup.cpp
.github/: PULL_REQUEST_TEMPLATE.md
lib/: AddTransaction.hpp  Calculator.hpp  DataFileGenerator.hpp  Date.hpp  Dialog.hpp  ExpenseListUpdater.hpp  GenerateDataFile.hpp  GenerateReport.hpp  Helper.hpp  ReportGenerator.hpp  Setup.hpp  Transaction.hpp  TransactionAdder.hpp  TransactionDeleter.hpp  UpdateExpenseList.hpp
src/: AddTransaction.cpp  Calculator.cpp  Calculator.hpp  DataFileGenerator.cpp  DataFileGenerator.hpp  Date.cpp  Dialog.cpp  Dialog.hpp  ExpenseListUpdater.cpp  ExpenseListUpdater.hpp  GenerateDataFile.cpp  GenerateReport.cpp  Helper.cpp  ReportGenerator.cpp  ReportGenerator.hpp  ReportViewer.cpp  ReportViewer.hpp  Setup.cpp  Transaction.cpp  TransactionAdder.cpp  TransactionAdder.hpp  TransactionDeleter.cpp  TransactionDeleter.hpp  UpdateExpenseList.cpp  addTransaction.cpp  app.cpp
src/entities/: Transaction.cpp  Transaction.hpp  User.cpp  User.hpp
src/operations/: AddTransaction.cpp  AddTransaction.hpp  DataFileGenerator.cpp  DataFileGenerator.hpp  DeleteTransaction.cpp  DeleteTransaction.hpp  ExpenseListUpdater.hpp  ReportGenerator.cpp  ReportGenerator.hpp  ReportViewer.cpp  ReportViewer.hpp  TransactionAdder.cpp  TransactionAdder.hpp  TransactionDeleter.hpp  UpdateTransaction.cpp  (+1 more)
test/: main.cpp  testCalculator.cpp  testDialog.cpp  testHelper.cpp  testSetup.cpp
(+13 files in other folders)
